stable-imitation-policy-with-waypoints/tests/6-cheese/run2/snds-seg-way.txt
  File "/Users/alexst-aubin/SummerResearch24/V2/stable-imitation-policy-with-waypoints/stable-imitation-policy-with-waypoints/imitate-task.py", line 230
    if config["test"]
                     ^
SyntaxError: invalid syntax
